src/css/index.css
/* BS5 dark theme overrides. Use html prefix for specificity over
 * Bootstrap's own :root and element selectors. */
html {
  --bs-body-bg: #000;
  --bs-body-color: #eee;
}

html .card {
  --bs-card-bg: #000;
  --bs-card-cap-bg: #000;
  --bs-card-cap-color: #eee;
  --bs-card-color: #eee;
}

html .modal-content {
  --bs-modal-bg: #000;
  --bs-modal-color: #eee;
}

html .modal-title {
  font-weight: bold;
  color: #fff;
}

html .modal-header {
  border-bottom-color: rgb(200,0,0);
}

html .btn-close-white {
  filter: invert(1) grayscale(100%) brightness(200%);
  opacity: 0.8;
}

html .modal-footer {
  border-top-color: rgb(200,0,0);
}

html .modal-body .fw-bold {
  color: #fff;
}

html .table,
html .table > :not(caption) > * > * {
  --bs-table-bg: #000;
  --bs-table-color: #eee;
  --bs-table-accent-bg: #000;
  background-color: #000 !important;
  box-shadow: none !important;
}

body {
  padding-bottom: 70px;
  background-color: rgb(0, 0, 0);
  /*background-image: url('../img/bg.jpg');
  background-attachment: fixed;*/
  color: #eee;
  line-height: 1.25;
  font-size: 0.81rem;
}

.section-wrapper {
  margin-bottom: 15px;
  position: relative;
  z-index: 1;
}

.section-title {
  padding: 4px 8px;
  border: 1px solid rgb(200,0,0);
  background-color: rgb(0,0,0,1.0);
}

.section-content {
  padding: 4px 2px;
  position: relative;
  z-index: 1;
}

.mini {
  font-size: 0.85rem;
}

.text-muted, .mute {
  color: #bbb !important;
}

.btn {
  font-weight: normal;
  font-size: inherit;
  margin-bottom: 0.25rem;
  margin-left: 0.125rem;
  margin-right: 0.125rem;
}

.bg-black {
  background-color: rgb(0,0,0) !important;
}

.spacer-header {
  font-size: 0.8rem;
  background-color: rgb(0,0,0);
  padding: 0.15rem 1rem;
}

.spacer-header .navbar-text {
  color: rgb(200, 140, 50);
}

.card {
  border: 1px solid rgb(200,0,0);
  background-color: rgb(0,0,0);
}

.card-header {
  border-bottom: 1px solid rgb(200,0,0);
}

.card-header button.btn {
  float: right;
  font-size: 0.81rem !important;
}

.modal-content {
  background-color: rgb(0,0,0);
  border: 2px solid #666;
}

.modal-content div {
  border-color: rgb(200,0,0);
}

.modal-fullscreen .modal-dialog {
  max-width: 100%;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

.modal-fullscreen .modal-content {
  border: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

#spacer-navbar {
  background-color: #000;
}

.table.table-noborder td, .table.table-noborder th {
  border: 0 !important;
}

.table.table-mini td, .table.table-mini th {
  padding: 0.1rem;
}

.table.table-mini .btn {
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
}

.table td, .table th {
  border-top: 1px solid rgb(200,0,0);
  color: #eee;
}

.table thead th {
  border-bottom: 2px solid rgb(200,0,0);
}

.alert-dark {
  background-color: #080808;
  color: #eee;
}

.btn-dark {
  background-color: #161616;
  border-bottom: 1px solid rgb(200,0,0);
}

.btn-dark:hover:not([disabled]), button.btn-dark:hover:not([disabled]) {
  background-color: #530D0D;
  border-bottom: 1px solid rgb(200,0,0);
}

.btn-dark.disabled, button.btn-dark:disabled {
  background-color: #202020;
}

.btn-secondary {
  background-color: #202020;
  border: 1px solid #323232;
  border-bottom: 1px solid rgb(0,0,0);
}

.btn-secondary:hover {
  background-color: #323232 !important;
  border: 1px solid #323232;
  border-bottom: 1px solid rgb(10,10,10);
}

.btn-secondary:disabled, .text-muted.btn-secondary {
  color: #888;
}

.btn-highlight {
  border: 1px solid #323232;
  border-bottom: 1px solid rgb(200,0,0);
}

.btn-secondary:hover:not(:disabled) {
  background-color: #530D0D !important;
  border-bottom: 1px solid rgb(200,0,0);
}

.circle-thingy {
  color: #101010;
  background-color: rgb(200, 140, 50);
  font-weight: bold;
  font-size: 1rem;
  width: 1.1rem;
  height: 1.1rem;
  display: inline-block;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
}

.circle-thingy-big {
  font-size: 1.5rem;
  width: 1.6rem;
  height: 1.6rem;
}

a.info {
  color: #101010;
  background-color: rgb(200, 140, 50);
  font-size: 18px;
  font-weight: bold;
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
}

a.info:hover {
  text-decoration: none;
}

.badge {
  border: 1px solid rgb(129,0,0);
  background-color: #101010;
  color: rgb(200, 140, 50) !important;
  font-size: 12px;
  font-weight: normal;
}

svg.plot {
  position: absolute;
  display:  inline;
  z-index:  0;
}

.plot-label {
  font: 14px monospace;
  fill: #EEEEEE;
}

.plot-label-hi {
  font: 14px monospace;
  fill: #7FDF3F;
}

.plot-legend {
  font: 12px monospace;
  fill: red;
}

#navcomp-transit-info td,
#spacer-status .navbar-text {
  font-variant-numeric: tabular-nums;
  font-family: monospace;
}

.plot-controls {
  background-color: #000;
  border: 1px solid rgb(200,0,0);
}

.plot-root {
  background-color: #000;
  overflow: hidden;
  position: relative;
  padding: 0px !important;
  margin: 0px !important;
}

.plot-root-bg {
  width: 100%;
  height: 100%;
  position: fixed;
  top: auto;
}

.plot-root-with-galaxy {
  background-image: url('/img/milkyway.jpg');
  background-size: auto 100%;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0.3;
}

.plot-point {
  position: absolute;
  text-align: center;
  vertical-align: middle;
}

.plot-point span:not(.badge) {
  font-size: 0.05rem;
}

.plot-point span:not(.badge).tiny {
  font-size: 0.025rem;
}

.dest {
  background-color: black !important;
  border-color: red !important;
  color: white !important;
}

.plot-point.big {
  font-size: 30px;
}

.plot-point.huge {
  font-size: 60px;
}

.plot-point:hover {
  text-decoration: none !important;
  color: white;
}

img.plot-image {
  user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

ul.plot-selected {
  position: absolute;
  list-style-type: none;
  margin: 0;
  padding: 0;
  z-index: 100;
}

.b {
  font-weight: bold !important;
}

.warn {
  color: rgb(200, 140, 50) !important;
}

/*
 * http://www.cssportal.com/style-input-range/
 */
input[type=range] {
  -webkit-appearance: none;
  padding: 0;
  width:   100%;
  border:  0px;
  background-color: transparent !important;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  background: #8A8A8A;
  border:     1px solid rgb(0,0,0);
  height:     31px;
  width:      14px;
  margin-top: -12px;
}

input[type=range]::-webkit-slider-runnable-track {
  background:    #000000;
  border:        0px;
  border-top:    1px solid rgb(52,58,64);
  border-bottom: 1px solid rgb(200,0,0);
  height:        10px;
  width:         100%;
}

.fade-enter-active, .fade-leave-active {
  transition: opacity .35s;
}

.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0;
}

